# cerulean_sonar_dvl

cerulean_sonar_dvl_driver/: CMakeLists.txt  package.xml
cerulean_sonar_dvl_driver/launch/: dvl.launch
cerulean_sonar_dvl_driver/src/: dvl_nmea_sentence_parser.cpp  dvl_to_range.cpp
cerulean_sonar_dvl_msgs/: CMakeLists.txt  package.xml
cerulean_sonar_dvl_msgs/msg/: DVLExtendedData.msg
cerulean_sonar_dvl_msgs/srv/: SetFloat32.srv  SetGeoPoint.srv
