<?xml version="1.0" encoding="utf-8"?>

<package format="2">

    <name>cerulean_sonar_dvl_driver</name>
    <version>0.0.1</version>
    <description>Driver for the Cerulean Sonar DVL</description>
    <maintainer email="brenton.leighton@sydney.edu.au">Brenton Leighton</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>nmea_msgs</depend>
    <depend>cerulean_sonar_dvl_msgs</depend>

</package>

